Modified code for my website

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,26 +1,50 @@
 {% extends "base.html" %}
 
 {% block content %}
+<style type="text/css">
+  .bg-cover {
+      background-color: #4682B4;
+  }
+</style>
   <main>
+  
+      <div class="jumbotron jumbotron bg-cover">
+        <div class="overlay"></div>
+        <div class="container">
+          <h1 class="display-3 mb-1">About Us</h1>
+          <p class="lead">John Hammell, President of International Advocates for Health Freedom
+           became the Study Director for THE IAHF LIVE BLOOD AND CELLULAR MATRIX STUDY as a way
+            to encourage the health freedom fighters of the world to do the simplest and most effective
+            thing humanly possible to defend their health and to oppose Big Pharma and the New World Order: INGEST ORGANIC SULFUR!</p>
+        </div>
+      </div>
+      <h1 class="text-center">Products</h1>
     <div class="container">
 
+      <!-- <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+          <h1 class="display-4">Fluid jumbotron</h1>
+          <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+        </div>
+      </div> -->
+
       <!--Navbar-->
-      <nav class="navbar navbar-expand-lg navbar-dark mdb-color lighten-3 mt-3 mb-5">
+      <!-- <nav class="navbar navbar-expand-lg navbar-dark mdb-color lighten-3 mt-3 mb-5"> -->
 
         <!-- Navbar brand -->
-        <span class="navbar-brand">Categories:</span>
+        <!-- <span class="navbar-brand">Categories:</span> -->
 
         <!-- Collapse button -->
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav"
+        <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav"
           aria-controls="basicExampleNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
-        </button>
+        </button> -->
 
         <!-- Collapsible content -->
-        <div class="collapse navbar-collapse" id="basicExampleNav">
+        <!-- <div class="collapse navbar-collapse" id="basicExampleNav"> -->
 
           <!-- Links -->
-          <ul class="navbar-nav mr-auto">
+          <!-- <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
               <a class="nav-link" href="#">All
                 <span class="sr-only">(current)</span>
@@ -36,18 +60,18 @@
               <a class="nav-link" href="#">Outwears</a>
             </li>
 
-          </ul>
+          </ul> -->
           <!-- Links -->
 
-          <form class="form-inline">
-            <div class="md-form my-0">
+          <!-- <form class="form-inline"> -->
+            <!-- <div class="md-form my-0">
               <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-            </div>
-          </form>
-        </div>
+            </div> -->
+          <!-- </form> -->
+        <!-- </div> -->
         <!-- Collapsible content -->
 
-      </nav>
+      <!-- </nav> -->
       <!--/.Navbar-->
 
       <!--Section: Products v.3-->
